[package]
name = "aimdb-data-contracts"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trait definitions for AimDB data contracts: SchemaType, Streamable, Observable, Linkable, Simulatable, Migratable, Settable"
keywords = ["aimdb", "iot", "edge", "schema", "contracts"]
categories = ["embedded", "no-std"]

[features]
default = ["std"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std", "serde_json?/std"]
# The ext trait needs core's registrar/connector-builder types (same wiring as
# `observable`); `dep:aimdb-derive` powers `#[derive(Linkable)]`.
linkable = ["alloc", "serde_json", "aimdb-core", "dep:aimdb-derive"]
# Dev-tier — never a default feature. The ext trait needs core's registrar,
# same coupling `observable` has. `rand` is the tracer CI uses to prove a
# production graph is sim-free (design 041 §3.1.1).
simulatable = ["rand", "aimdb-core"]
migratable = ["alloc", "serde_json", "dep:aimdb-derive"]
observable = ["alloc", "aimdb-core"]
# Moved behind a feature for tier symmetry with the other wire contracts
# (design 041 §3.4). A pure trait — no dependencies of its own.
settable = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { workspace = true, optional = true }

# migration_chain! + #[derive(Linkable)] proc-macros (build-time only; no
# target/runtime/no_std impact — see aimdb-derive). No cycle: aimdb-derive
# emits token paths to this crate but does not depend on it.
aimdb-derive = { version = "0.2.0", path = "../aimdb-derive", optional = true }

# Optional: shared by the `linkable`, `observable`, and `simulatable` registrar
# ext traits (RecordRegistrar/RuntimeContext). Note: aimdb-core requires the
# alloc feature for core functionality.
aimdb-core = { version = "1.1.0", path = "../aimdb-core", optional = true, default-features = false, features = [
    "alloc",
] }
# RNG is caller-supplied, so we need only the `Rng`/`RngExt` traits and the
# always-available `SmallRng` — no `std_rng` (design 041 §3.1.1, decision 2).
[dependencies.rand]
version = "0.10.1"
optional = true
default-features = false

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"
