[package]
name = "aimdb-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for AimDB record key types"
keywords = ["aimdb", "derive", "macro", "record-key"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"
