[package]
name = "aimdb-embassy-adapter"
version = "0.3.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embassy async runtime adapter for AimDB embedded targets"
keywords = ["embassy", "embedded", "async", "no_std", "runtime"]
categories = ["embedded", "asynchronous", "no-std"]
build = "build.rs"

[features]
default = ["alloc"]

# Heap allocation support (required for Arc-based readers)
alloc = []

# Runtime features
embassy-runtime = ["embassy-executor", "embassy-time", "embassy-sync"]
embassy-net-support = ["embassy-net"]                                  # Network stack support for connectors

# Task pool size configuration for dynamic spawning
# Only one should be enabled at a time (default is 8)
embassy-task-pool-8 = []  # Default: 8 concurrent dynamic tasks
embassy-task-pool-16 = [] # Medium: 16 concurrent dynamic tasks
embassy-task-pool-32 = [] # Large: 32 concurrent dynamic tasks

# Observability features (no_std compatible)
tracing = ["aimdb-core/tracing", "dep:tracing"]

# Note: std feature is intentionally kept but will cause build.rs to fail if enabled
# This provides clear error messages when accidentally enabled
std = []

# Metrics feature placeholder - enables cfg(feature = "metrics") checks but does nothing.
# Actual metrics support requires std (AtomicU64, etc.) and is not implemented for Embassy.
# This feature exists only to silence cfg warnings and for API consistency.
metrics = []

[dependencies]
# Executor traits
aimdb-executor = { version = "0.1.0", path = "../aimdb-executor", default-features = false, features = [
    "embassy-types",
] }

# Core AimDB types - no_std for Embassy (requires alloc for typed APIs)
aimdb-core = { version = "0.3.0", path = "../aimdb-core", default-features = false, features = [
    "alloc",
] }

# Stream trait for bidirectional connectors (minimal, no_std compatible)
futures-core = { version = "0.3", default-features = false }

# Embassy ecosystem for embedded async
embassy-executor = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true }

# Embedded HAL for peripheral abstractions
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-nb = { workspace = true }

# Logging for embedded
defmt = { workspace = true }

# Observability (optional, no_std compatible)
tracing = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
# For testing on embedded targets  
heapless = "0.9.1"

# Utilities for async testing
futures = "0.3"

# For tracing tests
tracing-test = "0.2"

# Random number generation for tests
rand = "0.8"
