[package]
name = "aimdb-embassy-adapter"
version = "0.6.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embassy async runtime adapter for AimDB embedded targets"
keywords = ["embassy", "embedded", "async", "no_std", "runtime"]
categories = ["embedded", "asynchronous", "no-std"]
build = "build.rs"

[features]
default = ["alloc"]

# Heap allocation support (required for Arc-based readers)
alloc = []

# Runtime features
embassy-runtime = ["embassy-executor", "embassy-time", "embassy-sync"]
embassy-net-support = ["embassy-net"]                                  # Network stack support for connectors

# Observability features (no_std compatible)
tracing = ["aimdb-core/tracing", "dep:tracing"]

# Note: std feature is intentionally kept but will cause build.rs to fail if enabled
# This provides clear error messages when accidentally enabled
std = []

# Buffer introspection counters (produced/consumed/dropped/occupancy).
# Backed by `aimdb-core`'s portable-atomic-based `BufferCounters` so it works on
# no_std targets (the final binary must provide a `critical-section` impl —
# cortex-m / embassy HALs do, same as `profiling`).
metrics = ["aimdb-core/metrics", "embassy-runtime"]

# Automatic stage profiling. Uses portable-atomic (with the `critical-section`
# fallback for 64-bit atomics, pulled in via aimdb-core/profiling) plus the Embassy
# clock, so it works on no_std targets. The final binary must provide a
# `critical-section` implementation (cortex-m / embassy HALs do).
profiling = ["aimdb-core/profiling", "embassy-runtime"]

[dependencies]
# Executor traits
aimdb-executor = { version = "0.2.0", path = "../aimdb-executor", default-features = false }

# Core AimDB types - no_std for Embassy (requires alloc for typed APIs)
aimdb-core = { version = "1.1.0", path = "../aimdb-core", default-features = false, features = [
    "alloc",
] }

# Stream trait for bidirectional connectors (minimal, no_std compatible)
futures-core = { version = "0.3", default-features = false }

# Embassy ecosystem for embedded async
embassy-executor = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true }

# Embedded HAL for peripheral abstractions
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-hal-nb = { workspace = true }

# Logging for embedded
defmt = { workspace = true }

# Observability (optional, no_std compatible)
tracing = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
# Phase 5 session smoke (`tests/session_smoke.rs`) drives the runtime-neutral
# `run_client` engine on the EmbassyAdapter clock — pull in aimdb-core's
# `connector-session` gate. Dev-only, so the normal no_std lib build (and the
# thumbv7em checks) stay `alloc`-only.
aimdb-core = { version = "1.1.0", path = "../aimdb-core", default-features = false, features = [
    "alloc",
    "connector-session",
] }

# For testing on embedded targets
heapless = "0.9.1"

# Utilities for async testing
futures = "0.3"

# Provides critical-section impl for host-side tests (embassy_sync channels need it)
critical-section = { version = "1.1", features = ["std"] }

# Lets host tests register a trivial time driver (defines `_embassy_time_now`),
# pulled in by embassy-time's `defmt-timestamp-uptime`. No tick feature here so
# it unifies with the workspace's `tick-hz-32_768` (mock-driver/std would force
# a conflicting tick rate).
embassy-time-driver = { path = "../_external/embassy/embassy-time-driver" }

# For tracing tests
tracing-test = "0.2"

# Random number generation for tests
rand = "0.10.1"
