[package]
name = "aimdb-macros"
version = "0.1.0"
edition = "2021"
authors = ["AimDB Contributors"]
description = "Procedural macros for AimDB runtime abstractions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aimdb-dev/aimdb"
keywords = ["database", "async", "embedded", "no-std", "macros"]
categories = ["embedded", "database-implementations", "asynchronous"]

[lib]
proc-macro = true

[features]
default = []
# Enable debug output for macro expansion
debug = []

[dependencies]
# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# For testing macro expansion
trybuild = "1.0"
