[package]
name = "aimdb-persistence-sqlite"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite persistence backend for AimDB"
keywords = ["database", "persistence", "sqlite"]
categories = ["database-implementations"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
aimdb-persistence = { version = "0.1.0", path = "../aimdb-persistence" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tempfile = "3"
