[package]
name = "aimdb-sync"
version = "0.6.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Synchronous blocking wrapper for AimDB - bridge async database to sync code"
repository.workspace = true
keywords = ["sync", "blocking", "wrapper", "database", "api"]
categories = ["database", "api-bindings"]

[dependencies]
# Core dependencies
aimdb-core = { path = "../aimdb-core", version = "1.1.0" }
aimdb-tokio-adapter = { path = "../aimdb-tokio-adapter", version = "0.6.0" }
tracing = { workspace = true, optional = true }

# Tokio for channels and runtime
tokio = { version = "1.40", features = ["sync", "rt", "time", "macros"] }

# Error handling
thiserror = { version = "2.0.16", default-features = false }

# Optional: Settable::set (feature `data-contracts`) for the `set_value` family.
# aimdb-sync depends on the contracts crate, never the reverse — the contracts
# crate has no `sync` feature.
aimdb-data-contracts = { path = "../aimdb-data-contracts", version = "0.4.0", optional = true, default-features = false, features = [
    "settable",
] }

# For type erasure and Any
[dev-dependencies]
# Testing dependencies
tokio = { version = "1.40", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]

std = []

# Enable tracing for debugging
tracing = ["dep:tracing", "aimdb-core/tracing"]

# SyncProducer::set_value / try_set_value / set_value_at for Settable types
data-contracts = ["dep:aimdb-data-contracts"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
