[package]
name = "aimdb-tokio-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = ["tokio-runtime"]

# Runtime features
tokio-runtime = ["tokio"]

# Observability features
tracing = ["aimdb-core/tracing", "dep:tracing"]
metrics = ["aimdb-core/metrics", "tokio-runtime"]

# Testing features
test-utils = ["aimdb-core/test-utils", "tokio-runtime"]

[dependencies]
# Executor traits
aimdb-executor = { path = "../aimdb-executor", default-features = false, features = [
    "std",
    "tokio-types",
] }

# Core AimDB types - std version for Tokio (for DbError integration)
aimdb-core = { path = "../aimdb-core", default-features = false, features = [
    "std",
    "tokio-runtime",
] }

# Tokio async runtime
tokio = { workspace = true, optional = true, features = [
    "time",
    "rt-multi-thread",
] }

# Observability (optional)
tracing = { workspace = true, optional = true }

[dev-dependencies]
# For async testing
tokio-test = { workspace = true }
futures = { workspace = true }
